# EricCodeCLI

./: LICENSE  README.md  demo.sh  pyproject.toml  setup.sh
src/ericcode/: __init__.py  cli.py
src/ericcode/cache/: __init__.py  manager.py
src/ericcode/config/: __init__.py  lm_studio_config.py  settings.py
src/ericcode/core/: __init__.py  analyzer.py  chat.py  completer.py  dungeon_cli.py  explainer.py  format_shifter.py  generator.py  git_smart_commit.py  secret_scrubber.py  shell_wizard.py
src/ericcode/providers/: __init__.py  base.py  lm_studio.py  local_provider.py  openai_provider.py  router.py
src/ericcode/utils/: __init__.py  git_integration.py  logging_config.py  security.py
tests/: conftest.py
tests/integration/: test_integration.py
tests/unit/: test_core.py
