[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ericcode"
version = "0.1.0"
description = "🤖 AI驱动的智能编码助手CLI工具"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "EricCode Team", email = "x674000249@gmail.com", url = "https://github.com/x674000249-boop"}
]
keywords = ["ai", "cli", "coding-assistant", "code-generation", "gpt", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dependencies = [
    "typer[all]>=0.9.0,<1.0.0",
    "rich>=13.7.0",
    "textual>=0.40.0",
    "httpx[http2]>=0.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "click>=8.1.0",
    "prompt-toolkit>=3.0.0",
    "tomli-w>=1.0.0;python_version<'3.11'",
    "tomli>=2.0.1;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.2.0",
    "black>=24.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

openai = [
    "openai>=1.12.0",
]

local = [
    "torch>=2.2.0",
    "transformers>=4.37.0",
    "accelerate>=0.26.0",
    "bitsandbytes>=0.42.0",
]

cache = [
    "redis>=5.0.0",
    "chromadb>=0.4.22",
]

all = [
    "ericcode[dev,openai,local,cache]",
]

[project.scripts]
ericcode = "ericcode.cli:app"

[project.urls]
Homepage = "https://github.com/ericcode/ericcode"
Documentation = "https://docs.ericcode.dev"
Repository = "https://github.com/ericcode/ericcode.git"
Issues = "https://github.com/ericcode/ericcode/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ericcode"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "ARG001", # unused function argument (common in callbacks)
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG001"]

[tool.black]
target-version = ['py311', 'py312']
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "structlog.*",
    "rich.*",
    "textual.*",
    "prompt_toolkit.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/ericcode",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "performance: performance benchmarks",
]

[tool.coverage.run]
source = ["src/ericcode"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
